--- a/Handson_1_Template.ipynb
+++ b/Handson_1_Template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 2 - How to write your first program"
+    "# Chapter 2 - How to write your first program- I DID IT"
    ]
   },
   {
