--- a/Handson_complete.ipynb
+++ b/Handson_complete.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,24 +43,27 @@
      "output_type": "stream",
      "text": [
       "Registration Form\n",
-      "Enter first name: tyler\n",
-      "Enter last name: borgman\n",
-      "Enter birth year2002\n",
-      "Welcome tyler borgman!\n",
-      "Your registration is complete\n",
-      "Your temp. password is tyler*2002\n"
+      "\n",
+      "First Name: Tyler\n",
+      "Last Name: Borgman\n",
+      "Birth Year: 2002\n",
+      "\n",
+      "Welcome Tyler Borgman!\n",
+      "Your registration is complete!\n",
+      "Your temp. password is: Tyler*2002\n"
      ]
     }
    ],
    "source": [
     "print(\"Registration Form\")\n",
-    "fname = input(\"Enter first name: \")\n",
-    "lname = input(\"Enter last name: \")\n",
-    "bday = int(input(\"Enter birth year \"))\n",
-    "\n",
+    "print()\n",
+    "fname = input(\"First Name: \")\n",
+    "lname = input(\"Last Name: \")\n",
+    "bday = int(input(\"Birth Year: \"))\n",
+    "print()\n",
     "print(\"Welcome \" + fname+\" \"+lname+\"!\")\n",
-    "print(\"Your registration is complete\")\n",
-    "print(\"Your temp. password is \"+fname+\"*\"+str(bday))"
+    "print(\"Your registration is complete!\")\n",
+    "print(\"Your temp. password is: \"+fname+\"*\"+str(bday))"
    ]
   },
   {
