--- a/Handson_complete.ipynb
+++ b/Handson_complete.ipynb
@@ -101,11 +101,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4100785790.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\tmb1036\\AppData\\Local\\Temp\\ipykernel_13692\\4100785790.py\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    tax_rate = 18%\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "### CODE HERE ###"
+    "print(\"Pay Check Calculator\")\n",
+    "print()\n",
+    "\n",
+    "totalhours = float(input(\"Hours Worked: \"))\n",
+    "payrate = float(input(\"Hourly Pay Rate: \"))\n",
+    "print()\n",
+    "\n",
+    "gross = totalhours * payrate\n",
+    "print(\"Gross Pay: \"+gross)\n",
+    "tax_rate = 18%\n",
+    "print(\"Tax Rate: \"+tax_rate)\n",
+    "taxes = gross * (tax_rate / 100)\n",
+    "print(\"Tax Amount: \"+taxes)\n",
+    "take_home = gross - taxes\n",
+    "print(\"Take Home Pay: \"+take_home)"
    ]
   },
   {
